# hubo_footstep_planner

./: .gitignore  LICENSE  README.md
FootstepPlanner/: CMakeCache.txt  CMakeLists.txt  FootstepPlanner  FootstepPlanner.cbp  Makefile  cmake_install.cmake
FootstepPlanner/astar/: MapSearchNode.cpp
FootstepPlanner/astar_include/: MapSearchNode.h  fsa.h  stlastar.h
FootstepPlanner/doc/html/: _foot_8h_source.html  _foot_constraint_8h_source.html  _foot_location_8h_source.html  _foot_location_node_8h_source.html  _footstep_plan_visualizer_8h_source.html  _footstep_planner_8h_source.html  _line_8h_source.html  annotated.html  class_footstep.html  classes.html  classfsp_1_1_foot-members.html  classfsp_1_1_foot.html  classfsp_1_1_foot_constraint-members.html  classfsp_1_1_foot_constraint.html  classfsp_1_1_foot_location-members.html  classfsp_1_1_foot_location.html  classfsp_1_1_foot_location_node-members.html  classfsp_1_1_foot_location_node.html  classfsp_1_1_footstep_plan_visualizer-members.html  classfsp_1_1_footstep_plan_visualizer.html  classfsp_1_1_footstep_planner-members.html  classfsp_1_1_footstep_planner.html  classfsp_1_1_line-members.html  classfsp_1_1_line.html  files.html  (+4 more)
FootstepPlanner/include/: Foot.h  FootConstraint.h  FootLocation.h  FootLocationComparator.h  FootLocationNode.h  FootstepPlanner.h  Line.h  main.h
FootstepPlanner/osg/: FootstepPlanVisualizer.cpp
FootstepPlanner/osg_include/: FootstepPlanVisualizer.h
FootstepPlanner/src/: Foot.cpp  FootConstraint.cpp  FootLocation.cpp  FootLocationNode.cpp  FootstepPlanner.cpp  Line.cpp  main.cpp
(+15 files in other folders)
